[package]
name = "websocket-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["fs", "cors"] }
axum-extra = { version = "0.3", features = ["spa"] }
tokio-tungstenite = "0.17"
futures = "0.3"

